Update on Overleaf.

--- a/CCS2024-latex_template.tex
+++ b/CCS2024-latex_template.tex
@@ -12,6 +12,28 @@
 
 \begin{document}
 
+
+% Reviews
+%Paper ID 326 Paper Title Optimising geospatial vector data matching algorithms for change detection with synthetic data
+%Reviewer #1
+%Questions
+%    1. Review confidence How confident are you about your review based on your knowledge of the area?        High
+%    3. If accepted, what would you recommend as form of presentation of this work?        Lightning talk (a few minutes in the plenary session without questions)
+%    5. What is your overall recommendation?        (2) Accept
+%    6. A brief review motivating your recommendation:
+%        I thought this was an interesting submission. I like the idea of tackling the ground truth issue in so many geospatial applications like this. The use of many techniques from many (adjacent) fields is well-motivated. The contribution is there, but it is not overly explicit on what we can really take away from this and how the field will be better. This feels a bit more assumed throughout (an assumption I share, to be clear). But a more explicit discussion of impact would have been welcomed. This theme and methods fit well with conference, though. Good work.
+
+%Reviewer #4
+%Questions
+%    1. Review confidence How confident are you about your review based on your knowledge of the area?        Low
+%    3. If accepted, what would you recommend as form of presentation of this work?        Poster
+%    5. What is your overall recommendation?        (-1) Weak reject
+%    6. A brief review motivating your recommendation:
+%        The abstract discusses using synthetic data to optimize geospatial vector data matching algorithms for change detection. The result obtained here seems unclear: "Our main result is that optimal matching algorithm parameters depend on the urban context, and that therefore no absolute best method exists."
+
+
+
+
 \title{Optimising geospatial vector data matching algorithms for change detection with synthetic data}
 \author{
 % Authors Names
